# gabrielkaszewski_rs_axum

./: .env.dev  Cargo.toml  README.md  Rocket.toml
.sqlx/: query-0d1e127ba6a88a7ec55c8dc1dd08bd28b6af07fa54f45d5115dfb924a065cb1d.json  query-a2c624a66b1999281d3b63e85b77785d0aae8d5ebc4865b7d42d7afd81e6f58c.json  query-ceab5c18f9b6b210d70360c36618d3e2fa125ba05c23926a852e90ccd4c7647f.json
assets/css/: main.css
migrations/: 20240818014833_user_init.sql
src/: main.rs
src/auth/: errors.rs  guards.rs  handlers.rs  mod.rs  models.rs  router.rs  service.rs  utils.rs
src/db/: mod.rs
src/web/: handlers.rs  mod.rs
src/work_experience/: mod.rs
templates/: base.html  index.html
templates/components/: chip.html  footer.html  job.html  navbar.html
