[package]
name = "gabrielkaszewski_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = { version = "0.12.1", default-features = false, features = ["with-rocket"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
askama_rocket = "0.12.0"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"


[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate", "chrono"]
